# DynamicGraphRepresentationLearning

./: .gitignore  CMakeLists.txt
config/: config.h  globals.h  types.h
experiments/: CMakeLists.txt
experiments/scripts/: all_exps.sh  chunk-size.sh  insert-only-throughput.sh  memory-footprint.sh  memory-throughput-latency.sh  mixed-workload.sh  self-speedup.sh  throughput-latency.sh  vertex-classification.sh
experiments/src/: all_exp.cpp  chunk_size.cpp  insert-only-throughput.cpp  learn_embeddings.cpp  memory-footprint.cpp  memory-throughput-latency.cpp  mixed-workload.cpp  self_speedup.cpp  throughput-latency.cpp  vertex-classification.cpp
graph/: dock.h  malin.h  snapshot.h  vertex.h  wharf.h  wharfmh.h
libs/compressed_trees/: rmat_util.h
libs/compressed_trees/graph/tree_plus/: compressed_iter.h  compressed_lists.h  edge_plus.h  immutable_graph_tree_plus.h  walk_plus.h
libs/compressed_trees/pbbslib/: get_time.h  scheduler.h
libs/compressed_trees/trees/: augmented_map.h  map.h  sequence_ops.h
tests/: CMakeLists.txt  dock.cpp  malin.cpp  sampler.cpp  wharf.cpp  wharfmh.cpp
utils/: utility.h
walks/: compressed_walks.h  metropolis_hastings_sampler.h
walks/models/: node2vec.h
